--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     //Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+
+    implementation "com.squareup.retrofit2:retrofit: 2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 }
