--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -24,7 +24,8 @@ jobs:
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11.0.4
+          java-package: jdk
       - name: build release 
         run: ./gradlew assembleRelease
       - name: Firebase App Distribution
