--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           java-version: 11.0.4
           java-package: jdk
+      # Step to install the NDK
+      - name: Install NDK
+        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570"
       - name: build release 
         run: ./gradlew --stacktrace assembleRelease
       - name: Firebase App Distribution
