--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -26,8 +26,10 @@ jobs:
         with:
           java-version: 11.0.4
           java-package: jdk
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: build release 
-        run: ./gradlew --stacktrace assembleDebug
+        run: ./gradlew --stacktrace assembleRelease
       - name: Firebase App Distribution
       # You may pin to the exact commit or the version.
       # uses: wzieba/Firebase-Distribution-Github-Action@71535f70a959206e3e57161c8ea53337ca49c335
