--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -44,4 +44,5 @@ jobs:
           appId: ${{secrets.FIREBASE_APP_ID}}
           token: ${{secrets.FIREBASE_SERVICE_ACCOUNT_PROJECTEN_3_GROW }}
           file: app/build/outputs/apk/release/app-release.apk
+          debug: true  
 
