--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -33,9 +33,14 @@ jobs:
       - name: convert gradlew
         run: dos2unix ./gradlew
       - name: test gradlew
-        run: ./gradlew clean -d
+        run: ./gradlew clean
       - name: build release 
-        run: ./gradlew --stacktrace assembleRelease
+        run: ./gradlew assembleRelease
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: app/build/outputs/apk/release/app-release.apk
       - name: Firebase App Distribution
       # You may pin to the exact commit or the version.
       # uses: wzieba/Firebase-Distribution-Github-Action@71535f70a959206e3e57161c8ea53337ca49c335
