--- a/.github/workflows/CI_CD_pipeline.yml
+++ b/.github/workflows/CI_CD_pipeline.yml
@@ -32,17 +32,10 @@ jobs:
         run: sudo apt-get install dos2unix
       - name: convert gradlew
         run: dos2unix ./gradlew
-      - name: test gradlew
-        run: ./gradlew clean
       - name: build release 
         run: ./gradlew assembleRelease
       - name: test files
         run: ls -l app/build/outputs/apk/debug
-      - name: Upload APK
-        uses: actions/upload-artifact@v1
-        with:
-          name: apk
-          path: app/release/app-release.apk
       - name: Firebase App Distribution
       # You may pin to the exact commit or the version.
       # uses: wzieba/Firebase-Distribution-Github-Action@71535f70a959206e3e57161c8ea53337ca49c335
@@ -50,6 +43,6 @@ jobs:
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
           token: ${{secrets.FIREBASE_SERVICE_ACCOUNT_PROJECTEN_3_GROW }}
-          file: app/release/app-release.apk
+          file: app/build/outputs/apk/release/app-release.apk
           debug: true  
 
