--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,6 @@ dependencies {
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
 }
