--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".PopupWindow"></activity>
 
-        <activity android:name=".login.uilogin.LoginActivity"></activity>
-        <activity android:name=".MainActivity">
-
+        <activity android:name=".login.uilogin.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+<!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+
         </activity>
 
     </application>
