--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.4'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
