--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
