--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        buildConfigField 'String', 'BASE_URL',"\"https://apigrow.azurewebsites.net/\""
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -106,6 +107,8 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.retrofit2:retrofit: 2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$interceptor_version"
 
     implementation "com.github.bumptech.glide:glide:4.11.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -124,9 +127,31 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
+    implementation "com.airbnb.android:lottie:$lottieVersion"
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //Gson
+    implementation "com.google.code.gson:gson:$gson_version"
+    //LifeCycle
+    implementation "androidx.lifecycle:lifecycle-common:$life_cycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$life_cycle"
+    implementation "android.arch.lifecycle:extensions:$life_cycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$life_cycle"
+
+    // Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    // Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    // Koin AndroidX Fragment features
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 }
 
