--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,20 @@ buildscript {
     ext{
         kotlin_version = "1.4.10"
         version_navigation = "2.3.0"
+        life_cycle = "2.2.0"
+        room_version = "2.2.5"
+        gson_version = "2.8.6"
+        lottieVersion = "3.5.0"
+        koin_version = "2.2.0-alpha-1"
+        okhttp_version = "4.9.0"
+        interceptor_version = "4.9.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
