--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,5 +128,11 @@ dependencies {
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    implementation project(':spotify-remote')
+    implementation project(':spotify-auth')
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.spotify.android:auth:1.1.0'
+    implementation 'androidx.browser:browser:1.0.0'
+
 }
 
