--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,16 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_growlauncher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_growlauncher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true">
+
 
         <uses-library android:name="android.test.runner"/>
         <uses-library android:name="android.test.base"/>
