--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
 
 
     testImplementation 'junit:junit:4.12'
@@ -127,6 +128,7 @@ dependencies {
 
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 
 }
 
