--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,5 +128,8 @@ dependencies {
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    //save preference dark/light mode
+    implementation "androidx.preference:preference-ktx:1.1.1"
+
 }
 
