--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         release {
@@ -128,6 +129,8 @@ dependencies {
 
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    compile 'com.github.devsideal:VectorChildFinder:1.0.0'
 
 
 }
