--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,6 @@ dependencies {
     // Rounded Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
 
     //Navigation Component
@@ -133,12 +132,32 @@ dependencies {
 
     implementation project(':spotify-remote')
     implementation project(':spotify-auth')
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.spotify.android:auth:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
 
     //compile 'com.github.devsideal:VectorChildFinder:1.0.0'
 
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //Gson
+    implementation "com.google.code.gson:gson:$gson_version"
+    //LifeCycle
+    implementation "androidx.lifecycle:lifecycle-common:$life_cycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$life_cycle"
+    implementation "android.arch.lifecycle:extensions:$life_cycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$life_cycle"
+
+    // Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    // Koin AndroidX ViewModel features
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    // Koin AndroidX Fragment features
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
 }
