--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,13 @@ buildscript {
     ext{
         kotlin_version = "1.4.10"
         version_navigation = "2.3.0"
+        life_cycle = "2.2.0"
+        room_version = "2.2.5"
+        gson_version = "2.8.6"
+        lottieVersion = "3.5.0"
+        koin_version = "2.2.0-alpha-1"
+        okhttp_version = "4.9.0"
+        interceptor_version = "4.9.0"
     }
     repositories {
         google()
