--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.spotify.android:auth:1.1.0'
     implementation 'androidx.browser:browser:1.0.0'
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
 
     //compile 'com.github.devsideal:VectorChildFinder:1.0.0'
 
