--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        buildConfigField 'String', 'BASE_URL',"\"https://apigrow.azurewebsites.net/\""
+        //buildConfigField 'String', 'BASE_URL',"\"https://apigrow.azurewebsites.net/\""
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -138,6 +138,8 @@ dependencies {
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
 
     //compile 'com.github.devsideal:VectorChildFinder:1.0.0'
+
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
