--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
@@ -71,19 +71,28 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
-
+    implementation 'org.koin:koin-android:2.0.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.koin:koin-test:2.0.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation 'org.mockito:mockito-core:3.0.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'org.mockito:mockito-inline:3.0.0'
+    testImplementation 'org.amshove.kluent:kluent:1.51'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0';
 
     // Rounded Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-
     //Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
 
     //moshi
     implementation "com.squareup.moshi:moshi:1.11.0"
@@ -94,18 +103,18 @@ dependencies {
 
     //rounded corners popup
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.android.support:multidex:1.0.3'
 
     //coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     //retrofit
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation "com.squareup.retrofit2:retrofit: 2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     implementation "com.github.bumptech.glide:glide:4.11.0"
@@ -124,8 +133,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.4'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.4'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
     
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
@@ -134,8 +141,10 @@ dependencies {
     implementation project(':spotify-auth')
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.spotify.android:auth:1.1.0'
-    implementation 'androidx.browser:browser:1.0.0'
+
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
+    implementation 'androidx.browser:browser:1.3.0'
+
 
     //compile 'com.github.devsideal:VectorChildFinder:1.0.0'
 
