--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    androidTestImplementation 'androidx.test:rules:1.3.0-beta01'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
