--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,7 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
     implementation 'org.koin:koin-android:2.0.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
@@ -86,6 +85,13 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0';
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'org.mockito:mockito-core:3.0.0'
+    androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    androidTestImplementation 'org.mockito:mockito-inline:3.0.0'
+
 
     // Rounded Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
