--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = "1.4.10"
         version_navigation = "2.3.0"
     }
+
     repositories {
         google()
         jcenter()
@@ -18,6 +19,10 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
+}
+
+plugins {
+    id("org.jetbrains.dokka") version "1.4.20"
 }
 
 allprojects {
