--- a/.github/workflows/AutomatedTestsOS.yml
+++ b/.github/workflows/AutomatedTestsOS.yml
@@ -13,7 +13,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -24,13 +24,7 @@ jobs:
         with:
           java-version: 11.0.4
           java-package: jdk
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      - name: install dos2unix
-        run: sudo apt-get install dos2unix
-      - name: convert gradlew
-        run: dos2unix ./gradlew
-      - name: ktlint check
-        run: ./gradlew app:ktlintCheck
-      - name: unit tests
-        run: ./gradlew test
+     - name: Android Emulator Runner
+       uses: ReactiveCircus/android-emulator-runner@v2.13.0
+
+      
