--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,10 +77,26 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
+
+    android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    implementation 'org.koin:koin-android:2.0.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.koin:koin-test:2.0.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation 'org.mockito:mockito-core:3.0.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'org.mockito:mockito-inline:3.0.0'
+    testImplementation 'org.amshove.kluent:kluent:1.51'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0';
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    androidTestImplementation 'org.mockito:mockito-core:3.0.0'
+    androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    androidTestImplementation 'org.mockito:mockito-inline:3.0.0'
 
 
     // Rounded Image View
