--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-core:3.0.0'
     androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
     androidTestImplementation 'org.mockito:mockito-inline:3.0.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-beta01'
 
 
     // Rounded Image View
@@ -111,7 +112,6 @@ dependencies {
     implementation "com.squareup.moshi:moshi:1.11.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
     implementation "com.squareup.moshi:moshi-adapters:1.8.0"
-    //implementation "com.squareup.moshi:moshi-kotlin-codegen:1.8.0"
 
 
     //rounded corners popup
